--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,36 +1,4 @@
-body {
-  margin: 0px;
-  padding: 0px;
-  width: 100%;
-  height: 100%;
-  font-family: "IBM Plex Sans Thai Looped", sans-serif;
-}
-
-body {
-  background-color: #f4f4f4;
-}
-
-header {
-  background-color: #121212;
-  color: #f2f2f2;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.fa-circle {
-  font-size: 0.5em;
-  color: #d85c17;
-}
-
-footer {
-  margin-top: 300px;
-  background-color: #121212;
-  color: #f2f2f2;
-}
-
-h1,
-h2 {
-  font-family: "Righteous", cursive;
-}
+@import "partials/variables";
+@import "partials/base";
+@import "partials/heading";
+@import "partials/footer";
