--- a/css/style.css
+++ b/css/style.css
@@ -77,4 +77,8 @@ footer {
   font-size: 1.7em;
   margin: 0px 10px 20px 10px;
 }
+
+.login-form input {
+  background-color: #efefef;
+}
 /*# sourceMappingURL=style.css.map */
