--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -4,6 +4,7 @@ $color-brand: #d85c17;
 $color-white: #f2f2f2;
 $color-sucess-button: #238b3f;
 $color-error: #d82617;
+$color-input-fields: #efefef;
 
 $font-primary: "IBM Plex Sans Thai Looped", sans-serif;
 $font-heading: "Righteous", cursive;
