--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -1,10 +1,10 @@
 $color-header-footer: #121212;
-$color-background: #f4f4f4;
+$color-background: #e5e5e3;
 $color-brand: #d85c17;
 $color-white: #f2f2f2;
-$color-sucess-button: #238b3f;
+$color-sucess: #238b3f;
 $color-error: #d82617;
-$color-input-fields: #efefef;
+$color-input-fields: #cbcbcb;
 
 $font-primary: "IBM Plex Sans Thai Looped", sans-serif;
 $font-heading: "Righteous", cursive;
