--- a/css/style.css
+++ b/css/style.css
@@ -122,4 +122,33 @@ footer {
   color: #238b3f;
   cursor: pointer;
 }
+
+.about-container img {
+  width: 100%;
+}
+
+.about-container .about-content {
+  margin: 30px;
+}
+
+.about-container li {
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.about-container i {
+  font-size: 0.6em;
+  margin-right: 10px;
+}
+
+.about-container h2 {
+  margin-top: 50px;
+}
+
+@media (min-width: 900px) {
+  .about-container {
+    max-width: 700px;
+    margin: 70px auto;
+  }
+}
 /*# sourceMappingURL=style.css.map */
