--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,21 @@ h2 {
   font-family: "Righteous", cursive;
 }
 
+h1 {
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 2.5em;
+}
+
 .fa-circle {
   font-size: 1em;
   color: #d85c17;
+}
+
+img {
+  width: 100%;
 }
 
 .menu {
@@ -123,10 +135,6 @@ footer {
   cursor: pointer;
 }
 
-.about-container img {
-  width: 100%;
-}
-
 .about-container .about-content {
   margin: 30px;
 }
@@ -150,5 +158,32 @@ footer {
     max-width: 700px;
     margin: 70px auto;
   }
+}
+
+.home-all-sneakers {
+  background-color: #f2f2f2;
+  padding: 40px 20px;
+  margin: 20px;
+}
+
+.home-all-sneakers hr {
+  color: #d85c17;
+}
+
+.home-all-sneakers span {
+  color: #d85c17;
+  font-weight: bold;
+}
+
+.home-all-sneakers p {
+  font-size: 1.5em;
+}
+
+.home-all-sneakers button {
+  background-color: #d85c17;
+  color: #f2f2f2;
+  border: 1px solid #d85c17;
+  padding: 15px 50px;
+  font-size: 1.6em;
 }
 /*# sourceMappingURL=style.css.map */
