--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -8,3 +8,8 @@ $color-input-fields: #cbcbcb;
 
 $font-primary: "IBM Plex Sans Thai Looped", sans-serif;
 $font-heading: "Righteous", cursive;
+
+$mobile-width: 649px;
+$tablet-min-width: 650px;
+$tablet-max-width: 899;
+$computer-min-width: 900px;
