--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-body {
-  margin: 0px;
-  padding: 0px;
-  width: 100%;
-  height: 100%;
-  font-family: "IBM Plex Sans Thai Looped", sans-serif;
-  background-color: #e5e5e3;
-}
-
 h1,
 h2 {
   font-family: "Righteous", cursive;
@@ -18,6 +9,33 @@ h1 {
 
 h2 {
   font-size: 2.5em;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+  font-family: "IBM Plex Sans Thai Looped", sans-serif;
+  background-color: #e5e5e3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.wrapper {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
 }
 
 .fa-circle {
@@ -75,11 +93,12 @@ img {
 }
 
 footer {
-  margin-top: 300px;
   padding: 40px;
   background-color: #121212;
   color: #f2f2f2;
   text-align: center;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .fa-facebook-f,
