--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100%;
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -5,19 +10,12 @@ body {
   height: 100%;
   font-family: $font-primary;
   background-color: $color-background;
+  display: flex;
+  flex-direction: column;
 }
 
-h1,
-h2 {
-  font-family: $font-heading;
-}
-
-h1 {
-  font-size: 3em;
-}
-
-h2 {
-  font-size: 2.5em;
+.wrapper {
+  flex: 1 0 auto;
 }
 
 .fa-circle {
