--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 @import "partials/variables";
+@import "partials/typography";
 @import "partials/base";
 @import "partials/heading";
 @import "partials/footer";
