--- a/sass/partials/_about.scss
+++ b/sass/partials/_about.scss
@@ -17,7 +17,7 @@
     margin-top: 50px;
   }
 
-  @media (min-width: 900px) {
+  @media (min-width: $tablet-min-width) {
     max-width: 700px;
     margin: 70px auto;
   }
