--- a/sass/partials/_heading.scss
+++ b/sass/partials/_heading.scss
@@ -19,14 +19,16 @@
   .fa-circle {
     font-size: 0.5em;
   }
+
   li a {
-    padding: 0px;
-    font-size: 1em;
+    padding: 3px;
+    font-size: 0.9em;
   }
 
   ul {
     list-style: none;
     display: flex;
+    padding-inline-start: 0px;
   }
 
   li {
@@ -37,11 +39,15 @@
     background: lighten($color-brand, 5%);
   }
 
-  @media (min-width: $computer-min-width) {
-    padding: 20px 40px;
+  @media (min-width: $tablet-min-width) {
+    padding: 10px 30px;
 
     .logo {
-      font-size: 2.3em;
+      font-size: 2.1em;
+    }
+
+    .fa-circle {
+      font-size: 1em;
     }
 
     li a {
