--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ body {
           flex-direction: column;
 }
 
+a {
+  text-decoration: none;
+  color: #121212;
+}
+
 .wrapper {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
@@ -63,7 +68,6 @@ img {
 
 .menu a {
   color: #f2f2f2;
-  text-decoration: none;
   text-transform: uppercase;
 }
 
@@ -118,6 +122,7 @@ img {
 }
 
 footer {
+  margin-top: 150px;
   padding: 40px;
   background-color: #121212;
   color: #f2f2f2;
@@ -210,28 +215,42 @@ footer {
   padding: 40px 20px;
   margin: 20px auto;
   max-width: 500px;
+  -webkit-box-shadow: 6px 6px 6px #cbcbcb;
+          box-shadow: 6px 6px 6px #cbcbcb;
+  border-top: 2px solid #d85c17;
+  border-radius: 2px;
 }
 
 .home-all-sneakers span,
 .home-about span {
   color: #d85c17;
   font-weight: bold;
-  font-size: 1.54em;
+  font-size: 1.4em;
 }
 
 .home-all-sneakers p,
 .home-about p {
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 .home-all-sneakers button,
 .home-about button {
   background-color: #d85c17;
   color: #f2f2f2;
+  -webkit-box-shadow: 4px 4px 4px #cbcbcb;
+          box-shadow: 4px 4px 4px #cbcbcb;
   border: 1px solid #d85c17;
-  padding: 15px 50px;
-  font-size: 1.6em;
+  padding: 10px 40px;
+  font-size: 1.1em;
   border-radius: 5px;
+  text-transform: uppercase;
+}
+
+.home-all-sneakers button:hover,
+.home-about button:hover {
+  background-color: #f2f2f2;
+  color: #d85c17;
+  cursor: pointer;
 }
 
 @media (min-width: 900px) {
