--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -14,6 +14,11 @@ body {
   flex-direction: column;
 }
 
+a {
+  text-decoration: none;
+  color: $color-header-footer;
+}
+
 .wrapper {
   flex: 1 0 auto;
 }
