--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -7,6 +7,8 @@
   box-shadow: 6px 6px 6px $color-input-fields;
   border-top: 2px solid $color-brand;
   border-radius: 2px;
+  display: flex;
+  flex-direction: column;
 
   span {
     color: $color-brand;
@@ -38,7 +40,7 @@
   @media (min-width: $computer-min-width) {
     max-width: 800px;
     margin: 70px auto;
-    display: flex;
+    flex-direction: row;
 
     .home-all-sneakers-text {
       flex-basis: 140%;
