--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,25 @@ h2 {
   font-family: "Righteous", cursive;
 }
 
+h3,
+p {
+  font-family: "IBM Plex Sans Thai Looped", sans-serif;
+}
+
 h1 {
   font-size: 3em;
 }
 
 h2 {
-  font-size: 2.5em;
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+p {
+  font-size: 1em;
 }
 
 html,
@@ -139,14 +152,17 @@ footer {
   margin: 0px 10px 20px 10px;
 }
 
-.login-form-common, .login-form input, .login-form button {
+.form-common, .login-form input,
+.add-edit-delete-form input, .login-form button,
+.add-edit-delete-form button {
   height: 60px;
   width: 100%;
   font-size: 1.2em;
   border-radius: 5px;
 }
 
-.login-form {
+.login-form,
+.add-edit-delete-form {
   max-width: 400px;
   margin: 70px auto;
   background-color: #f2f2f2;
@@ -156,32 +172,66 @@ footer {
           box-shadow: 6px 6px 6px #cbcbcb;
 }
 
-.login-form .form-content {
+.login-form .form-content,
+.add-edit-delete-form .form-content {
   position: relative;
 }
 
-.login-form input {
+.login-form input,
+.add-edit-delete-form input {
   background-color: #cbcbcb;
   border: none;
   margin-bottom: 40px;
 }
 
-.login-form label {
+.login-form label,
+.add-edit-delete-form label {
   position: absolute;
   top: 0px;
   left: 5px;
 }
 
-.login-form button {
-  background-color: #238b3f;
+.login-form button,
+.add-edit-delete-form button {
   color: #f2f2f2;
+  cursor: pointer;
+  margin-bottom: 15px;
+}
+
+.login-form button.login-add,
+.add-edit-delete-form button.login-add {
+  background-color: #238b3f;
   border: #238b3f 1px solid;
 }
 
-.login-form button:hover {
+.login-form button.login-add:hover,
+.add-edit-delete-form button.login-add:hover {
   background-color: #f2f2f2;
   color: #238b3f;
-  cursor: pointer;
+}
+
+.login-form button.edit,
+.add-edit-delete-form button.edit {
+  background-color: #d85c17;
+  border: #d85c17 1px solid;
+}
+
+.login-form button.edit:hover,
+.add-edit-delete-form button.edit:hover {
+  background-color: #f2f2f2;
+  color: #d85c17;
+}
+
+.login-form button.delete,
+.add-edit-delete-form button.delete {
+  background-color: #d82617;
+  border: #d82617 1px solid;
+}
+
+.login-form button.delete:hover,
+.add-edit-delete-form button.delete:hover {
+  background-color: #f2f2f2;
+  color: #d82617;
 }
 
 .about-container .about-content {
@@ -219,6 +269,13 @@ footer {
           box-shadow: 6px 6px 6px #cbcbcb;
   border-top: 2px solid #d85c17;
   border-radius: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .home-all-sneakers span,
@@ -258,9 +315,10 @@ footer {
   .home-about {
     max-width: 800px;
     margin: 70px auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   .home-all-sneakers .home-all-sneakers-text,
   .home-about .home-all-sneakers-text {
@@ -274,5 +332,13 @@ footer {
         flex-basis: 207%;
     margin-left: 20px;
   }
+}
+
+.main-products {
+  background-color: white;
+}
+
+.product-content {
+  margin: 50px;
 }
 /*# sourceMappingURL=style.css.map */
