--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -3,10 +3,23 @@ h2 {
   font-family: $font-heading;
 }
 
+h3,
+p {
+  font-family: $font-primary;
+}
+
 h1 {
   font-size: 3em;
 }
 
 h2 {
-  font-size: 2.5em;
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+p {
+  font-size: 1em;
 }
