--- a/css/style.css
+++ b/css/style.css
@@ -334,11 +334,54 @@ footer {
   }
 }
 
-.main-products {
-  background-color: white;
+.product-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(50%, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+}
+
+@media (min-width: 650px) {
+  .product-container {
+    -ms-grid-columns: (minmax(33%, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
+  }
+}
+
+@media (min-width: 900px) {
+  .product-container {
+    -ms-grid-columns: (minmax(25%, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
+    max-width: 1500px;
+    margin: 70px auto;
+  }
 }
 
 .product-content {
-  margin: 50px;
+  margin: 10px;
+  background-color: #f2f2f2;
+  -webkit-box-shadow: 6px 6px 6px #cbcbcb;
+          box-shadow: 6px 6px 6px #cbcbcb;
+}
+
+.product-content h2 {
+  font-size: 1.1em;
+  text-transform: uppercase;
+}
+
+.product-content p {
+  font-size: 0.8em;
+}
+
+.product-content img {
+  width: 100%;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.product-content:hover {
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
 }
 /*# sourceMappingURL=style.css.map */
