--- a/sass/partials/_products.scss
+++ b/sass/partials/_products.scss
@@ -1,7 +1,39 @@
-.main-products {
-  background-color: white;
+.product-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+
+  @media (min-width: $tablet-min-width) {
+    grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
+  }
+
+  @media (min-width: $computer-min-width) {
+    grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
+    max-width: 1500px;
+    margin: 70px auto;
+  }
 }
 
 .product-content {
-  margin: 50px;
+  margin: 10px;
+  background-color: $color-white;
+  box-shadow: 6px 6px 6px $color-input-fields;
+
+  h2 {
+    font-size: 1.1em;
+    text-transform: uppercase;
+  }
+
+  p {
+    font-size: 0.8em;
+  }
+
+  img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+
+  &:hover {
+    transform: scale(1.02);
+  }
 }
