--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -9,15 +9,27 @@ p {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2em;
+
+  @media (min-width: $computer-min-width) {
+    font-size: 3em;
+  }
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 1.6em;
+
+  @media (min-width: $computer-min-width) {
+    font-size: 2em;
+  }
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 1.2em;
+
+  @media (min-width: $computer-min-width) {
+    font-size: 1.5em;
+  }
 }
 
 p {
