--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 @import "partials/variables";
 @import "partials/typography";
+@import "partials/buttons";
 @import "partials/base";
 @import "partials/heading";
 @import "partials/footer";
