--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ p {
   cursor: pointer;
   margin-bottom: 15px;
   color: #f2f2f2;
-  text-transform: uppercase;
   -webkit-box-shadow: 4px 4px 4px #cbcbcb;
           box-shadow: 4px 4px 4px #cbcbcb;
 }
@@ -424,5 +423,15 @@ footer {
     width: 500px;
     height: 500px;
   }
+}
+
+.cart-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 /*# sourceMappingURL=style.css.map */
