--- a/css/style.css
+++ b/css/style.css
@@ -429,9 +429,11 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  margin: 20px;
+  max-height: 200px;
+}
+
+.cart-content img {
+  height: 50px;
 }
 /*# sourceMappingURL=style.css.map */
