--- a/sass/partials/cart.scss
+++ b/sass/partials/cart.scss
@@ -1,8 +1,13 @@
 .cart-content {
   display: flex;
   margin: 20px;
+  max-height: 200px;
+  flex-direction: column;
+  justify-content: space-between;
 
   img {
-    height: 50px;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
   }
 }
