--- a/css/style.css
+++ b/css/style.css
@@ -425,23 +425,18 @@ footer {
   }
 }
 
-.no-products-content {
+.cart-container {
   background-color: #f2f2f2;
-  max-width: 400px;
-  margin: 40px auto;
   padding: 20px;
+  max-width: 600px;
+  margin: 60px auto;
+}
+
+.cart-container .no-products-content {
   text-align: center;
 }
 
-.no-products-content a {
-  text-decoration: underline;
-}
-
-.cart-container {
-  margin: 60px 20px 0px 20px;
-}
-
-.cart-content {
+.cart-container .cart-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -452,7 +447,7 @@ footer {
   border-top: 1px solid #cbcbcb;
 }
 
-.cart-content .cart-content-container {
+.cart-container .cart-content-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -461,19 +456,54 @@ footer {
           align-items: center;
 }
 
-.cart-content p {
+.cart-container .cart-total-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 120px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-top: 1px solid #cbcbcb;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.cart-container p {
   margin: 0px 10px 0px 0px;
+  font-size: 0.8em;
 }
 
-.cart-content a {
+@media (min-width: 650px) {
+  .cart-container p {
+    font-size: 1em;
+  }
+}
+
+.cart-container a {
   text-decoration: underline;
+  font-size: 0.8em;
 }
 
-.cart-content img {
-  width: 100px;
-  height: 100px;
+@media (min-width: 650px) {
+  .cart-container a {
+    font-size: 1em;
+  }
+}
+
+.cart-container img {
+  width: 70px;
+  height: 70px;
   -o-object-fit: cover;
      object-fit: cover;
-  margin-right: 20px;
+  margin-right: 10px;
+}
+
+@media (min-width: 650px) {
+  .cart-container img {
+    width: 100px;
+    height: 100px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
