--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,16 @@ footer {
   left: 5px;
 }
 
+.search {
+  height: 60px;
+  width: 100%;
+  font-size: 1.2em;
+  border-radius: 5px;
+  background-color: #cbcbcb;
+  border: none;
+  margin-bottom: 40px;
+}
+
 .about-container .about-content {
   margin: 30px;
 }
@@ -388,13 +398,6 @@ footer {
 
 .product-content p {
   font-size: 0.8em;
-}
-
-.product-content img {
-  width: 100%;
-  height: 300px;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .product-content:hover {
