--- a/sass/partials/_form.scss
+++ b/sass/partials/_form.scss
@@ -27,3 +27,13 @@
     left: 5px;
   }
 }
+
+.search {
+  height: 60px;
+  width: 100%;
+  font-size: 1.2em;
+  border-radius: 5px;
+  background-color: $color-input-fields;
+  border: none;
+  margin-bottom: 40px;
+}
