--- a/sass/partials/_products.scss
+++ b/sass/partials/_products.scss
@@ -36,11 +36,11 @@
     font-size: 0.8em;
   }
 
-  img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-  }
+  // img {
+  //   width: 100%;
+  //   height: 300px;
+  //   object-fit: cover;
+  // }
 
   &:hover {
     transform: scale(1.02);
