--- a/css/style.css
+++ b/css/style.css
@@ -296,9 +296,50 @@ footer {
   }
 }
 
-.home-all-sneakers,
-.home-about,
+.hero-banner {
+  background-size: cover;
+  height: 400px;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: center;
+  min-width: 100%;
+}
+
+@media (min-width: 650px) {
+  .hero-banner {
+    height: 700px;
+  }
+}
+
 .home-featured {
+  background-color: #f2f2f2;
+  padding: 40px 20px;
+  margin: -110px auto 100px auto;
+  max-width: 1000px;
+  -webkit-box-shadow: 6px 6px 6px #cbcbcb;
+          box-shadow: 6px 6px 6px #cbcbcb;
+  border-top: 2px solid #d85c17;
+  border-radius: 2px;
+}
+
+.home-featured .home-featured-heading {
+  text-align: center;
+}
+
+.home-featured h1 {
+  text-transform: uppercase;
+  font-size: 4em;
+}
+
+.home-featured .featured-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(33%, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
+}
+
+.home-all-sneakers,
+.home-about {
   background-color: #f2f2f2;
   padding: 40px 20px;
   margin: 20px auto;
@@ -317,29 +358,25 @@ footer {
 }
 
 .home-all-sneakers span,
-.home-about span,
-.home-featured span {
+.home-about span {
   color: #d85c17;
   font-weight: bold;
   font-size: 1.4em;
 }
 
 .home-all-sneakers p,
-.home-about p,
-.home-featured p {
+.home-about p {
   font-size: 1.3em;
 }
 
 .home-all-sneakers button,
-.home-about button,
-.home-featured button {
+.home-about button {
   width: 40%;
 }
 
 @media (min-width: 900px) {
   .home-all-sneakers,
-  .home-about,
-  .home-featured {
+  .home-about {
     max-width: 800px;
     margin: 70px auto;
     -webkit-box-orient: horizontal;
@@ -348,28 +385,17 @@ footer {
             flex-direction: row;
   }
   .home-all-sneakers .home-all-sneakers-text,
-  .home-about .home-all-sneakers-text,
-  .home-featured .home-all-sneakers-text {
+  .home-about .home-all-sneakers-text {
     -ms-flex-preferred-size: 140%;
         flex-basis: 140%;
     margin-left: 20px;
   }
   .home-all-sneakers .home-about-text,
-  .home-about .home-about-text,
-  .home-featured .home-about-text {
+  .home-about .home-about-text {
     -ms-flex-preferred-size: 207%;
         flex-basis: 207%;
     margin-left: 20px;
   }
-}
-
-.hero-banner {
-  background-size: cover;
-  height: 700px;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  background-position-y: center;
-  min-width: 100%;
 }
 
 @media (min-width: 900px) {
