--- a/sass/partials/_form.scss
+++ b/sass/partials/_form.scss
@@ -12,13 +12,18 @@
   }
 
   input {
-    height: 60px;
+    height: 45px;
     width: 100%;
-    font-size: 1.2em;
+    font-size: 1em;
     border-radius: 5px;
     background-color: $color-input-fields;
     border: none;
     margin-bottom: 40px;
+
+    @media (min-width: $tablet-min-width) {
+      height: 60px;
+      font-size: 1.2em;
+    }
   }
 
   label {
